# nocoredump

./: CMakeLists.txt  Makefile  README.md  main.cpp
base/: lock.h  log.h  nocopy.h  singletonholder.h
srv/: catch_exceptions.h  stack_trace.h
